if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    file(GLOB child_entries RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*")
    list(SORT child_entries)

    foreach(child_entry IN LISTS child_entries)
        set(child_dir "${CMAKE_CURRENT_SOURCE_DIR}/${child_entry}")
        if(IS_DIRECTORY "${child_dir}" AND EXISTS "${child_dir}/CMakeLists.txt")
            add_subdirectory("${child_dir}" "${CMAKE_CURRENT_BINARY_DIR}/${child_entry}")
        endif()
    endforeach()
endif()
